[gd_scene load_steps=2 format=3 uid="uid://i12hxruy0aqc"]

[ext_resource type="Script" path="res://Scripts/UI/StatusIcon.gd" id="1_a2w0c"]

[node name="StatusIcon" type="Panel"]
custom_minimum_size = Vector2(24, 24)
script = ExtResource("1_a2w0c")

[node name="IconLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "B"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DurationLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -13.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "3"